# rust-learnings

./: README.md
eurostar/src/: lib.rs
proc-macro-playground/: Cargo.toml
proc-macro-playground/src/: lib.rs  main.rs
proc-macro-workshop/: README.md  main.rs
proc-macro-workshop/bitfield/: Cargo.toml
proc-macro-workshop/bitfield/impl/: Cargo.toml
proc-macro-workshop/bitfield/impl/src/: lib.rs
proc-macro-workshop/bitfield/src/: lib.rs
proc-macro-workshop/bitfield/tests/: 02-storage.rs  03-accessors.rs  04-multiple-of-8bits.rs  04-multiple-of-8bits.stderr  05-accessor-signatures.rs  06-enums.rs  07-optional-discriminant.rs  08-non-power-of-two.rs  08-non-power-of-two.stderr  09-variant-out-of-range.rs  09-variant-out-of-range.stderr  10-bits-attribute.rs  11-bits-attribute-wrong.rs  11-bits-attribute-wrong.stderr  12-accessors-edge.rs  progress.rs
proc-macro-workshop/builder/: Cargo.toml
proc-macro-workshop/builder/src/: lib.rs
proc-macro-workshop/builder/tests/: 08-unrecognized-attribute.stderr
proc-macro-workshop/debug/: Cargo.toml
proc-macro-workshop/debug/src/: lib.rs
proc-macro-workshop/seq-impl/: Cargo.toml
proc-macro-workshop/seq-impl/src/: lib.rs
proc-macro-workshop/seq/src/: lib.rs
proc-macro-workshop/sorted/: Cargo.toml
proc-macro-workshop/sorted/src/: lib.rs
proc-macro-workshop/sorted/tests/: 02-not-enum.stderr  09-underscore-fail.rs  09-underscore-fail.stderr  progress.rs
smart-pointers/: Cargo.toml
smart-pointers/src/: cell.rs  lib.rs  rc.rs  refcell.rs
