[package]
name = "bitfield"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
bitfield-impl = { path = "impl" }
syn = "1.0.33"
quote = "1.0.7"

[features]
nightly = ["bitfield-impl/nightly"]
