[package]
name = "seq-impl"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
syn = { version = "1.0.33", features = ["fold"] }
quote = "1.0.7"
proc-macro2 = "1.0.18"
proc-macro-hack = "0.5.16"
